Fix - spacing of checkbox and radio button on form builder

--- a/assets/css/scss/_admin.scss
+++ b/assets/css/scss/_admin.scss
@@ -690,6 +690,11 @@
 					border: 1px dashed transparentize( $blue, 0.75 );
 				}
 
+				input[type="checkbox"],
+				input[type="radio"] {
+					margin-right: 10px;
+				}
+
 				.evf-field-action {
 					position: absolute;
 					top: 15px;
